# GEO_API

./: .env_copy  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0f6f85c832a8_add_aoi_column_to_projects.py  580574bff74a_inital_migration.py
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
docker/: Dockerfile
utils/: geojson_conversion.py
